--- a/Contact.html
+++ b/Contact.html
@@ -2,9 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="la chouette agence est une agence de web design qui aide 
+    <meta name="keywords" content="agence web lyon,agence web design lyon,agence développement web lyon">
+    <meta name="description" content="la chouette agence est une agence de web design qui aide 
 	les entreprises à devenir attractives est visibles sur internet">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<link rel="stylesheet" href="style.css">
+	
 	
     
 	<script src="./js/jquery-2.1.0.min.js"></script>
@@ -42,9 +42,10 @@
 					  <li><a href="Contact.html">Contact</a></li>
 				</ul>
 			</div>
-		</nav>
+		</nav> 
+	  </div>
 	</header>
-  </div>
+ 
   <!-- header END -->
   <!-- section -->
   <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
@@ -73,24 +74,24 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" required  placeholder="Jhone deo"/>
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" required placeholder="jhonedoe@yahoo.com" />
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="email" required id="input_504" placeholder="facebook,twitter,..." />
 					</div>
-					<div class="form-group">
+					<div class="form-group ">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" class="form-control textarea" rows="4" cols="50" required placeholder="veillez écrivez ici "></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
