travaille sur structure de page  contact

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="contact.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
@@ -37,8 +37,6 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					  <li><a href="index.html">Accueil</a></li>
-					  <li><a href="#article">A propos</a></li>
-					  <li><a href="#section">Notre travail</a></li>
 					  <li><a href="Contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -99,7 +97,7 @@
 				</form>
 			</div>
 			<div class="col-sm-6">
-				<p>
+				<p class="contact">
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 			</div>
@@ -119,7 +117,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
+					La chouette agence - Agence web basée à Lyon
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
